# xtract

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: config.toml  log4rs.yml  message.toml
src/: config.rs  main.rs  transformations.rs  upload.rs  utils.rs
src/transformations/: filter.rs  split.rs  transform.rs  transformer.rs
