[package]
name = "xtract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
serde = {version = "1.0.215", features = ["derive"]} 
quick-xml = "0.37.1"
chrono = "0.4.38"
evalexpr = "11.3.1"
lettre = "0.11.9"
log = "0.4.21"
log4rs = "1.3.0"
fs_extra = "1.3.0"
dotenvy = "0.15.7"
